--- a/project/src/style/reset.css
+++ b/project/src/style/reset.css
@@ -1,37 +1,99 @@
+/* reset all elements */
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    
-}
-
-textarea {
-    overflow: auto;
- }
- button {
-    cursor: pointer;
-    background: transparent;
-    border: 0;
- }
- img {
-    width: 100%;
- }
-
-button,
-input,
-select,
-textarea {
-   font-family: inherit;
-   font-size: 100%;
    box-sizing: border-box;
-   padding: 0;
    margin: 0;
-   cursor: pointer;
+   padding: 0;
 }
 
-table {
-   border-collapse: collapse;
-   border-spacing: 0;
+/* more specific elements */
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+   margin: 0;
+   padding: 0;
+   border: 0;
+   font-size: 100%;
+   font: inherit;
+   vertical-align: baseline;
 }
 
 body {
@@ -42,6 +104,52 @@ ol,
 ul {
    list-style: none;
 }
+
 li {
    text-decoration: none;
 }
+
+blockquote,
+q {
+   quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+   content: "";
+   content: none;
+}
+
+table {
+   border-collapse: collapse;
+   border-spacing: 0;
+}
+
+/* reset forms */
+button,
+input,
+select,
+textarea {
+   font-family: inherit;
+   font-size: 100%;
+   box-sizing: border-box;
+   padding: 0;
+   margin: 0;
+}
+
+textarea {
+   overflow: auto;
+}
+
+button {
+   cursor: pointer;
+   background: transparent;
+   border: 0;
+}
+
+img {
+   width: 100%;
+}
+
