--- a/project/src/style/font.css
+++ b/project/src/style/font.css
@@ -1,10 +1,10 @@
 @font-face{
-    font-family: ‘JetBrains Mono’;
-    src: url(‘https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/webfonts/JetBrainsMono-Regular.woff2’) format(‘woff2’),
-       url(‘https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/ttf/JetBrainsMono-Regular.ttf’) format(‘truetype’);
+    font-family: "JetBrains Mono";
+    src: url("https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/webfonts/JetBrainsMono-Regular.woff2") format("woff2"),
+       url("https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/ttf/JetBrainsMono-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
  }
  body {
-    font-family: ‘JetBrains Mono’;
+    font-family: "JetBrains Mono";
  }
