--- a/project/src/style/variables.css
+++ b/project/src/style/variables.css
@@ -15,6 +15,10 @@
 
     /*  Variables for breakpoints 1300 and below    */
 
-    --body-font-size-small: 20px;
-    --body-line-height-small: 30px;
+    --heading-font-size-small: 2.6rem;
+    --heading-line-height-small: 4rem;
+
+    --body-font-size-small: 1rem;
+    --body-line-height-small: 1.7rem;
+
 }
