--- a/project/src/style/variables.css
+++ b/project/src/style/variables.css
@@ -1,29 +1,26 @@
 :root {
-    --highlight: #ADFF00;
-    --primary: #000000;
-    --secondary: #E3E3E3;
+  --highlight: #adff00;
+  --primary: #000000;
+  --secondary: #e3e3e3;
 
-    --heading-font-size: 50px;
-    --heading-line-height: 66px;
+  --heading-font-size: 50px;
+  --heading-line-height: 66px;
 
-    --body-font-size: 30px;
-    --body-line-height: 40px;
-    
-    --caption-font-size: 20px;
-    --caption-line-height: 26px;
+  --body-font-size: 30px;
+  --body-line-height: 40px;
 
+  --caption-font-size: 20px;
+  --caption-line-height: 26px;
 
-    /*  Variables for breakpoints 1300 and below    */
+  /*  Variables for breakpoints 1300 and below    */
 
-    --heading-font-size-small: 2.6rem;
-    --heading-line-height-small: 4rem;
+  --heading-font-size-small: 2.6rem;
+  --heading-line-height-small: 4rem;
 
-    --body-font-size-small: 1rem;
-    --body-line-height-small: 1.7rem;
+  --body-font-size-small: 1rem;
+  --body-line-height-small: 1.7rem;
 
-    --section-padding: 100px 0 40px 0;
-    --heading-padding: 100px 0 20px 0;
-    --ingress-padding-bottom: 20px;
-    
-
+  --section-padding: 0 0 40px 0;
+  --heading-padding: 100px 0 20px 0;
+  --ingress-padding-bottom: 20px;
 }
