--- a/project/src/style/style.css
+++ b/project/src/style/style.css
@@ -8,8 +8,9 @@ h2 {
   padding-bottom: 20px;
 }
 
-.header__item {
+.books__item {
   padding-bottom: 40px;
+  grid-column: span 2;
 }
 
 /* GRID MAIN PAGE */
@@ -21,25 +22,6 @@ h2 {
   padding: 0 23px;
 }
 
-/* 
-.articles__item-0 {
-  grid-column: 3 / 11;
-  text-align: center;
-}
-
-.articles__link {
-  grid-column: 2 / 6;
-}
-
-.articles__item-2 {
-  grid-column: 7 / 13;
-}
- */
-
-.header__item {
-  grid-column: span 2;
-}
-
 .books__heading {
   grid-column: span 12;
 }
@@ -48,51 +30,12 @@ h2 {
   grid-column: span 12;
 }
 
-.slideshow__heading {
-  grid-column: span 12;
-}
-
 .footer {
   grid-column: span 12;
 }
 
-/* SUBGRID DESKTOP */
-@media screen and (min-width: 968px) {
-  .articles__item-1 {
-    grid-column: 1 / 7;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 0 12px;
-    text-align: center;
-  }
-  .articles__item-2 {
-    grid-column: 7 / 13;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 0 12px;
-    text-align: center;
-  }
-
-  .articles__lead-1,
-  .articles__lead-2 {
-    grid-column: 2 / 6;
-  }
-
-  .articles__figure-1,
-  .articles__figure-2 {
-    grid-column: 1 / 7;
-  }
-}
-
-/* GRID MOBILE MAIN PAGE */
+/* GRID MOBILE MAIN PAGE BOOKS */
 @media screen and (max-width: 968px) {
-  .articles__item-0,
-  .articles__item-1,
-  .articles__item-2 {
-    grid-column: span 12;
-    text-align: center;
-  }
-
   .header__item {
     grid-column: span 4;
   }
@@ -110,23 +53,6 @@ h2 {
 .section__header--padding--less {
   padding-top: 60px;
 }
-
-.articles__link {
-  font-size: var(--heading-font-size);
-  text-decoration: none;
-  color: black;
-}
-
-.articles__figure-0 {
-  padding-bottom: 100px;
-}
-
-.articles__link {
-  padding-bottom: 20px;
-}
-
-.articles__lead-0,
-.articles__lead-1,
-.articles__lead-2 {
-  padding-bottom: 20px;
+.section__header--padding {
+  padding-top: 100px;
 }
